Bug 77692 - Crash when trying to add a timer to a detached document.
Summary: Crash when trying to add a timer to a detached document.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: jochen
URL:
Keywords:
Depends on:
Blocks: 77370
  Show dependency treegraph
 
Reported: 2012-02-02 17:16 PST by jochen
Modified: 2012-02-03 00:19 PST (History)
3 users (show)

See Also:


Attachments
Patch (1.99 KB, patch)
2012-02-02 17:18 PST, jochen
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description jochen 2012-02-02 17:16:32 PST
Crash when trying to add a timer to a detached document.
Comment 1 jochen 2012-02-02 17:18:53 PST
Created attachment 125215 [details]
Patch
Comment 2 WebKit Review Bot 2012-02-03 00:19:25 PST
Comment on attachment 125215 [details]
Patch

Clearing flags on attachment: 125215

Committed r106636: <http://trac.webkit.org/changeset/106636>
Comment 3 WebKit Review Bot 2012-02-03 00:19:29 PST
All reviewed patches have been landed.  Closing bug.